scss/mixins/_screen-reader.scss
// Only display content to screen readers
//
// See: http://a11yproject.com/posts/how-to-hide-content
//
// 1. For long content, line feeds are not interpreted as spaces and small width
//    causes content to wrap 1 word per line:
//    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
// 2. `clip` is deprecated, use `clip-path` for future-proofing
//    https://www.w3.org/TR/css-masking-1/#clip-property
// See also:
//    https://hugogiraudel.com/2016/10/13/css-hide-and-seek/


@mixin sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    //clip-path: inset(50%); //2
    white-space: nowrap; // 1
    border: 0;
}

// Use in conjunction with .sr-only to only display content when it's focused.
//
// Useful for "Skip to main content" links; see https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
//
// Credit: HTML5 Boilerplate

@mixin sr-only-focusable {
    &:active,
    &:focus {
        position: static;
        width: auto;
        height: auto;
        overflow: visible;
        clip: auto;
        //clip-path: none;
        white-space: inherit;
    }
}

